<resources>
    <string name="app_name">車聯網腳踏車防護系統</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_setting">設定</string>
    <string name="SW_NBIoT">啟用NB-IOT</string>
    <!-- Preference Titles -->
    <string name="user_header">使用者設定</string>
    <string name="feature_header">功能設定</string>
    <string name="sync_header">Sync</string>
    <string name="cloud_header">網路</string>
    <string name="develop_header">進階選項</string>
    <!-- Messages Preferences -->
    <string name="signature_title">設定使用者ID</string>
    <string name="nb_title">上傳模式</string>
    <string name="post_time_title">上傳間隔時間(秒)</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="Cloud_title">啟用上傳功能</string>
    <string name="notify_title">啟用警報功能</string>
    <string name="develop_title">啟用進階選項</string>
    <string name="_title">車聯網腳踏車防護系統</string>
    <string name="device_text">車聯網腳踏車</string>
    <string name="bluetooth_conn_failed_text">藍芽連線失敗</string>
    <string name="device_select_not_yet_text">尚未選擇裝置</string>
    <string name="bluetooth_not_open">藍芽尚未開啟</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="NavTitle2">通知</string>
    <string name="NavTitle1">首頁</string>
    <string name="NavTitle3">儀表板</string>
    <string name="NavTitle4">設定</string>

    <string name="unknown_device_text">不支援的裝置</string>

    <string name="top_appbar_item1">藍芽連線</string>
    <string name="top_appbar_item2">切斷藍芽連線</string>
    <string name="device_connected">藍芽已連線</string>
    <string name="device_not_connected">藍芽尚未連線</string>
    <string name="select_correct_device_first_text">請先選擇欲連線裝置</string>
    <string name="kilo_text">公里</string>
    <string name="meter_text">公尺</string>
    <string name="speed_unit">km/h</string>
</resources>