<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity.MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_Respond"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/speed_unit"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/SpeedView"
            app:layout_constraintStart_toEndOf="@+id/SpeedView"
            app:layout_constraintTop_toTopOf="@+id/SpeedView" />

        <TextView
            android:id="@+id/MileUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/meter_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/MileageView"
            app:layout_constraintStart_toEndOf="@+id/MileageView"
            app:layout_constraintTop_toTopOf="@+id/MileageView" />



        <ImageView
            android:id="@+id/BTStaLight"
            android:layout_width="14dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/BTInfoTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/BTInfoTV"
            app:srcCompat="@drawable/drawable_circle_gray" />

        <TextView
            android:id="@+id/BTInfoTV"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <View
            style="@style/Divider"
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BTInfoTV" />
        <TextView
            android:id="@+id/BTStaTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/BTInfoTV"
            app:layout_constraintStart_toEndOf="@+id/BTInfoTV"
            app:layout_constraintTop_toTopOf="@+id/BTInfoTV" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/NotiMute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:text="靜音手機警報"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/SpeedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="130dp"
            android:text="現在時速:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <TextView
            android:id="@+id/SpeedView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="0"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/SpeedTitle"
            app:layout_constraintStart_toEndOf="@+id/SpeedTitle"
            app:layout_constraintTop_toTopOf="@+id/SpeedTitle" />

        <TextView
            android:id="@+id/MileageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="總里程數:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SpeedView" />

        <TextView
            android:id="@+id/MileageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="0"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/MileageTitle"
            app:layout_constraintStart_toEndOf="@+id/MileageTitle"
            app:layout_constraintTop_toTopOf="@+id/MileageTitle" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:stretchColumns="*"
            app:layout_constraintBottom_toTopOf="@+id/include2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/lck_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_span="1"
                    android:background="@drawable/button_style_off"
                    android:drawableLeft="@drawable/ic_baseline_lock_open_24"
                    android:text="上鎖模式"

                    android:textColor="?attr/colorControlNormal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/las_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_span="1"
                    android:background="@drawable/button_style_off"
                    android:drawableLeft="@drawable/ic_bike_icon_off_black"
                    android:text="自動煞車"

                    android:textColor="?attr/colorControlNormal"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/SpLit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"


                    android:layout_span="1"
                    android:background="@drawable/button_style_off"
                    android:drawableLeft="@drawable/ic_speed"
                    android:text="時速限制:0"
                    android:textAlignment="center"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buzz_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_span="1"

                    android:background="@drawable/button_style_off"
                    android:drawableLeft="@drawable/ic_baseline_volume_up_24"
                    android:text="靜音蜂鳴器"

                    android:textColor="?attr/colorControlNormal"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:menu="@menu/top_app_bar"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:title="@string/_title"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:navigationIcon="@drawable/drawable_menu" />

        </com.google.android.material.appbar.AppBarLayout>

        <include
            android:id="@+id/include2"
            layout="@layout/bottom_nav_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/nav_view" />
</androidx.drawerlayout.widget.DrawerLayout>